client/src/components/ExploreInviteSection.css
  .image-container {
    margin-top: 20px;
    margin-bottom: 20px;
  }
  
  .animate-up-down {
    width: 500px;
    height: auto;
    animation: moveUpDown 3s ease-in-out infinite;
  }

  
  .butt {
    height: 50px;
    width: 150px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    transition: all 0.5s ease-in-out;
  }
  
  .butt:hover {
    box-shadow: .5px .5px 150px #252525;
  }
  
  .type1::after {
    content: "Recipes";
    height: 50px;
    width: 150px;
    background-color: #000000;
    color: #fff;
    position: absolute;
    top: 0%;
    left: 0%;
    transform: translateY(50px);
    font-size: 1.2rem;
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.5s ease-in-out;
  }
  
  .type1::before {
    content: "Let's Explore";
    height: 50px;
    width: 150px;
    background-color: #fff;
    color: #000000;
    position: absolute;
    top: 0%;
    left: 0%;
    transform: translateY(0px) scale(1.2);
    font-size: 1.2rem;
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.5s ease-in-out;
  }
  
  .type1:hover::after {
    transform: translateY(0) scale(1.2);
  }
  
  .type1:hover::before {
    transform: translateY(-50px) scale(0) rotate(120deg);
  }
  
  @keyframes moveUpDown {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-20px);
    }
    100% {
      transform: translateY(0);
    }
  }
  
  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  
  @keyframes throw {
    0% {
      left: 50%;
      top: 50%;
      opacity: 1;
      transform: translate(-50%, -50%) scale(1);
    }
    100% {
      left: 100%;
      top: 0;
      opacity: 0;
      transform: translate(-50%, -50%) scale(0.5);
    }
  }
  

